<resources>
    <string name="app_name">YourMate</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="register_account">Belum punya akun? Daftar Sekarang</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="welcome_desc">Hello, senang melihat anda kembali 😄. Anda bisa melanjutkan menggunakan app setelah anda login kembali.</string>
    <string name="welcome_title">Selamat Datang 👋</string>
    <string name="register_title">Buat Akun</string>
    <string name="register_desc">Buat akun agar dapat menggunakan yourmate 😉.</string>
    <string name="name">Nama</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="login_now">Sudah punya akun? Login Sekarang</string>
    <string name="register">Register</string>

    <string name="loading">Loading...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>